# Rust-Warp-Example

./: .gitignore  .ignore  Cargo.toml  README.md  build.rs  dev.py  rustfmt.toml
public/: authorized.html
public/css/views/: ranking.css
src/: lib.rs  main.rs  read.rs  server.rs  session.rs
src/api/: authorized.rs  car.rs  game.rs  handlers.rs  hello.rs  hi.rs  index.rs  mod.rs  ranking.rs  routes.rs  user.rs
src/api/private/: mod.rs  password.rs  profile.rs
src/db/: sqlite.rs
src/handlers/: authorized_handler.rs  car_handler.rs  error_handler.rs  game_handler.rs  hello_handler.rs  hi_handler.rs  index_handler.rs  mod.rs  ranking_handler.rs  user_handler.rs
src/handlers/private/: mod.rs  password_handler.rs  profile_handler.rs
src/models/: README.md  car.rs  car_with_user.rs  cash.rs  game.rs  game_with_user.rs  mod.rs  ranking.rs
src/models/private/: game.rs  mod.rs  password.rs  profile.rs
src/models/user/: mod.rs  new_user.rs  requests.rs  responses.rs  user.rs  user_monolithic.rs
src/routes/: authorized_route.rs  car_route.rs  game_route.rs  hello_route.rs  hi_route.rs  index_route.rs  mod.rs  ranking_route.rs  user_route.rs
src/routes/private/: mod.rs  password_route.rs  profile_route.rs
src/security/: argon.rs  mod.rs
src/template_setup/: tera.rs
src/tests/: cors_test.rs  mod.rs
src/utils/: game.rs  mod.rs  random.rs
src/views/: index.tera  ranking.tera
